src/test/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-1.stderr
error[E0214]: parenthesized parameters may only be used with a trait
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:8:19
   |
LL |     let x: Box<Bar()> = panic!();
   |                   ^^ only traits may use parentheses

error: aborting due to previous error

For more information about this error, try `rustc --explain E0214`.
