src/test/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-1.rs
// Test that parentheses form doesn't work with struct types appearing in local variables.

struct Bar<A> {
    f: A
}

fn bar() {
    let x: Box<Bar()> = panic!();
    //~^ ERROR parenthesized parameters may only be used with a trait
}

fn main() { }
